--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Password :<input type="password" name="pass"/>
 </form>
 <script language="javascript">
 function check(form){
- if(form.user.value == "shahabaj" && form.pass.value == "vishnu")
+ if(form.user.value == "shahabaj" && form.pass.value == "alfiya)
   {
     window.open('home.html')
   }
